# api/src/api/routes/operation.ts
@@ -2,7 +2,7 @@ import { type RequestHandler, Router } from 'express';
 import { spawnProcess } from '../services/operation';
 
 const operationRouter = Router({ mergeParams: true });
-operationRouter.get('/analyze/:operation', (async (req, res, next) => {
+operationRouter.patch('/analyze/:operation', (async (req, res, next) => {
   if (req.params.operation == null) {
     return res.status(400).send({
       result: false,
@@ -17,30 +17,30 @@ operationRouter.get('/analyze/:operation', (async (req, res, next) => {
   };
   const operation = req.params.operation;
   if (
-    req.body.ids == null ||
-    req.body.ids.length < 1 ||
-    req.body.ids.length > 2
+    req.body.blobNames == null ||
+    req.body.blobNames.length < 1 ||
+    req.body.blobNames.length > 2
   ) {
     return badRequest();
   }
   const cmd = {
     cmd: '',
-    id1: '',
-    id2: '',
+    blobName1: '',
+    blobName2: '',
   };
   switch (operation) {
     case 'compare':
       cmd.cmd = 'compare';
-      cmd.id1 = req.body.ids[0];
-      cmd.id2 = req.body.ids[1];
+      cmd.blobName1 = req.body.ids[0];
+      cmd.blobName2 = req.body.ids[1];
       break;
     case 'classify':
       cmd.cmd = 'classify';
-      cmd.id1 = req.body.ids[0];
+      cmd.blobName1 = req.body.ids[0];
       break;
     case 'extract':
       cmd.cmd = 'extract';
-      cmd.id1 = req.body.ids[0];
+      cmd.blobName1 = req.body.ids[0];
       break;
     default:
       return badRequest();
